# sample-python-exp

./: .gitignore  Jenkinsfile  README.md  poetry.toml  pyproject.toml
src/sample_pkg/: module_one.py  module_two.py
tests/test_sample_pkg/: test_module_one.py  test_module_two.py
